Issue #5:
Body colour set to the Figma colour standard

Shadows matching Figma.

Remove <Scrollable> as no height was set so no scrollbar showed anyway!

--- a/src/components/coursecard.scss
+++ b/src/components/coursecard.scss
@@ -16,3 +16,7 @@
 
     }
 }
+
+.shadow-sm {
+    box-shadow: 4px 4px 7px rgba($black, .15)  !important;
+}
