--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,7 @@
 @import './components/classroomheader.scss';
 @import './components/coursecard.scss';
 @import './features/classroom/classroom.scss';
+
+body {
+    background-color: #F8F7F9; //Figma background color
+}
